--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "http-status-code": "^2.1.0",
+    "express-validator": "^6.14.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2"
   }
